--- a/MonoGame/MonoGame/MonoGame.csproj
+++ b/MonoGame/MonoGame/MonoGame.csproj
@@ -38,12 +38,35 @@
     <ApplicationIcon>Icon.ico</ApplicationIcon>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="Commands\NullCommand.cs" />
+    <Compile Include="Commands\LeftCommand.cs" />
+    <Compile Include="Commands\RightCommand.cs" />
+    <Compile Include="Commands\DownCommand.cs" />
     <Compile Include="Game1.cs" />
     <Compile Include="Controllers\KeyboardController.cs" />
+    <Compile Include="Interfaces\IAnimatedSprite.cs" />
+    <Compile Include="Interfaces\IGameState.cs" />
+    <Compile Include="Interfaces\ISpriteFactory.cs" />
     <Compile Include="Interfaces\ICommands.cs" />
     <Compile Include="Interfaces\IController.cs" />
+    <Compile Include="Interfaces\IPlayerState.cs" />
+    <Compile Include="Object States\Player States\DownWalkingState.cs" />
+    <Compile Include="Object States\Player States\DownIdleState.cs" />
+    <Compile Include="Object States\Player States\UpWalkingState.cs" />
+    <Compile Include="Object States\Player States\UpIdleState.cs" />
+    <Compile Include="Object States\Player States\RightWalkingState.cs" />
+    <Compile Include="Object States\Player States\RightIdleState.cs" />
+    <Compile Include="Object States\Player States\LeftWalkingState.cs" />
+    <Compile Include="Object States\Player States\LeftIdleState.cs" />
+    <Compile Include="Objects\Level.cs" />
+    <Compile Include="Objects\Player.cs" />
+    <Compile Include="Game States\PlayingGameState.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Factories\SpriteFactory.cs" />
+    <Compile Include="Sprites\PlayerMovingSprite.cs" />
+    <Compile Include="Sprites\StaticSprite.cs" />
+    <Compile Include="Commands\UpCommand.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="MonoGame.Framework">
@@ -58,6 +81,7 @@
   <ItemGroup>
     <MonoGameContentReference Include="Content\Content.mgcb" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath)\MonoGame\v3.0\MonoGame.Content.Builder.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
