--- a/MonoGame/MonoGame/MonoGame.csproj
+++ b/MonoGame/MonoGame/MonoGame.csproj
@@ -40,12 +40,29 @@
   <ItemGroup>
     <Compile Include="Collision\TileCollisionResponse.cs" />
     <Compile Include="Collision\CollisionDetection.cs" />
-    <Compile Include="Commands\NullCommand.cs" />
-    <Compile Include="Commands\LeftCommand.cs" />
-    <Compile Include="Commands\RightCommand.cs" />
-    <Compile Include="Commands\DownCommand.cs" />
+    <Compile Include="Commands\Menu Direction Commands\MenuSelectCommand.cs" />
+    <Compile Include="Commands\Menu Direction Commands\MenuDownCommand.cs" />
+    <Compile Include="Commands\Menu Function Commands\ExitMenuCommand.cs" />
+    <Compile Include="Commands\Menu Function Commands\OptionsMenuCommand.cs" />
+    <Compile Include="Commands\Menu Function Commands\SaveMenuCommand.cs" />
+    <Compile Include="Commands\Menu Function Commands\CharacterMenuCommand.cs" />
+    <Compile Include="Commands\Menu Function Commands\GearMenuCommand.cs" />
+    <Compile Include="Commands\Menu Function Commands\BagMenuCommand.cs" />
+    <Compile Include="Commands\Menu Function Commands\MonsterMenuCommand.cs" />
+    <Compile Include="Commands\Menu Function Commands\IndexMenuCommand.cs" />
+    <Compile Include="Commands\Player Commands\NullCommand.cs" />
+    <Compile Include="Commands\Player Commands\LeftCommand.cs" />
+    <Compile Include="Commands\Player Commands\RightCommand.cs" />
+    <Compile Include="Commands\Player Commands\DownCommand.cs" />
+    <Compile Include="Commands\Menu Direction Commands\MenuUpCommand.cs" />
+    <Compile Include="Commands\Player Commands\PauseCommand.cs" />
+    <Compile Include="Controllers\MenuController.cs" />
+    <Compile Include="Factories\TileFactory.cs" />
+    <Compile Include="Game States\PauseMenuGameState.cs" />
+    <Compile Include="Game States\EncounterGameState.cs" />
     <Compile Include="Game1.cs" />
     <Compile Include="Controllers\KeyboardController.cs" />
+    <Compile Include="GUIs\GUI.cs" />
     <Compile Include="Interfaces\IAnimatedSprite.cs" />
     <Compile Include="Interfaces\IGameState.cs" />
     <Compile Include="Interfaces\ITileState.cs" />
@@ -53,7 +70,7 @@
     <Compile Include="Interfaces\ICommands.cs" />
     <Compile Include="Interfaces\IController.cs" />
     <Compile Include="Interfaces\IPlayerState.cs" />
-    <Compile Include="Object States\Tile States\TreeTileState.cs" />
+    <Compile Include="Object States\Tile States\GenericTileState.cs" />
     <Compile Include="Objects\LevelBuilder.cs" />
     <Compile Include="Object States\Player States\DownWalkingState.cs" />
     <Compile Include="Object States\Player States\DownIdleState.cs" />
@@ -64,6 +81,7 @@
     <Compile Include="Object States\Player States\LeftWalkingState.cs" />
     <Compile Include="Object States\Player States\LeftIdleState.cs" />
     <Compile Include="Objects\Level.cs" />
+    <Compile Include="Objects\Monster.cs" />
     <Compile Include="Objects\Player.cs" />
     <Compile Include="Game States\PlayingGameState.cs" />
     <Compile Include="Program.cs" />
@@ -71,9 +89,8 @@
     <Compile Include="Factories\SpriteFactory.cs" />
     <Compile Include="Sprites\PlayerMovingSprite.cs" />
     <Compile Include="Sprites\StaticSprite.cs" />
-    <Compile Include="Commands\UpCommand.cs" />
+    <Compile Include="Commands\Player Commands\UpCommand.cs" />
     <Compile Include="Objects\Tile.cs" />
-    <Compile Include="Object States\Tile States\WallTileState.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="MonoGame.Framework">
@@ -83,6 +100,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Content\arrowCursor.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
     <Content Include="Content\PlayerSprites\DownIdlePlayer.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
@@ -115,11 +135,18 @@
   <ItemGroup>
     <MonoGameContentReference Include="Content\Content.mgcb" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Folder Include="Content\Fonts\" />
+  </ItemGroup>
   <ItemGroup>
     <Content Include="Content\Levels\Level.csv">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Content\guiFont.spritefont">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath)\MonoGame\v3.0\MonoGame.Content.Builder.targets" />
