--- a/MonoGame/MonoGame/MonoGame.csproj
+++ b/MonoGame/MonoGame/MonoGame.csproj
@@ -38,6 +38,7 @@
     <ApplicationIcon>Icon.ico</ApplicationIcon>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="Camera\Camera.cs" />
     <Compile Include="Collision\GrassCollisionResponse.cs" />
     <Compile Include="Collision\BuildingCollisionResponse.cs" />
     <Compile Include="Collision\LedgeCollisionResponse.cs" />
@@ -79,6 +80,8 @@
     <Compile Include="GUIs\EncounterGUI.cs" />
     <Compile Include="GUIs\GUI.cs" />
     <Compile Include="Interfaces\IAnimatedSprite.cs" />
+    <Compile Include="Interfaces\ICamera.cs" />
+    <Compile Include="Interfaces\IFocusable.cs" />
     <Compile Include="Interfaces\IGameState.cs" />
     <Compile Include="Interfaces\IBuildingState.cs" />
     <Compile Include="Interfaces\ILedgeState.cs" />
@@ -207,6 +210,9 @@
     <None Include="Content\Fonts\guiFont.spritefont">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <Content Include="Content\Levels\pokeCenterLevel.csv">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath)\MonoGame\v3.0\MonoGame.Content.Builder.targets" />
