--- a/MonoGame/MonoGame/MonoGame.csproj
+++ b/MonoGame/MonoGame/MonoGame.csproj
@@ -39,6 +39,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="Camera\Camera.cs" />
+    <Compile Include="Collision\ExitCollisionResponse.cs" />
     <Compile Include="Collision\GrassCollisionResponse.cs" />
     <Compile Include="Collision\BuildingCollisionResponse.cs" />
     <Compile Include="Collision\LedgeCollisionResponse.cs" />
